email validation in form

--- a/404.html
+++ b/404.html
@@ -18,8 +18,8 @@ layout: post
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>Page not found go back please.</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <h3><strong>Page inexistante :(</strong></h3>
+  <h3>Votre requête n'a pas pu aboutir.</h3>
 </div>
