fix things pb when log through share button

--- a/404.html
+++ b/404.html
@@ -18,8 +18,8 @@ layout: post
 </style>
 
 <div class="container">
-  <h1>Page not found go back please.</h1>
+  <h1>Spiruline,  le super-aliment pour booster votre <br> énergie toute la journée.</h1>
 
-  <h3><strong>Page inexistante :(</strong></h3>
-  <h3>Votre requête n'a pas pu aboutir.</h3>
+  <!-- <h3><strong>Page inexistante :(</strong></h3> -->
+  <h3> Laissez-nous prendre soin de vous. </h3>
 </div>
