--- a/404.html
+++ b/404.html
@@ -17,9 +17,11 @@ layout: post
   }
 </style>
 
-<div class="container">
-  <h1>Spiruline,  le super-aliment pour booster votre <br> énergie toute la journée.</h1>
 
-  <!-- <h3><strong>Page inexistante :(</strong></h3> -->
-  <h3> Laissez-nous prendre soin de vous. </h3>
+<div class="text-color">
+
+  <h3> Spiruline,  le super-aliment pour booster votre <br> énergie toute la journée.</h3>
+
+  <h4> Laissez-nous prendre soin de vous. </h4>
+
 </div>
